# scvelo

./: .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .travis_install.sh  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  debug.py  pypi.rst  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  version.py  versioneer.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md  general_question.md
.github/workflows/: build.yml  ci.yml  ci_push.yml  release.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: _key_contributors.rst  about.rst  api.rst  conf.py  getting_started.rst  index.rst  installation.rst  notebooks.rst  perspectives.rst  readthedocs.yml  readthedocs_environments.yml  references.bib  references.rst  release_notes.rst  usage_principles.rst  vignettes.rst
docs/source/_ext/: edit_on_github.py
docs/source/_static/: custom.css
docs/source/api/: datasets.py  index.rst  pl.py  utils.py
docs/source/perspectives/: index.rst
docs/source/vignettes/: index.rst
scvelo/: __init__.py  _version.py  datasets.py  logging.py  pl.py  pp.py  read_load.py  settings.py  tl.py  utils.py
scvelo/core/: __init__.py  _anndata.py  _arithmetic.py  _base.py  _inference.py  _linear_models.py  _metrics.py  _models.py  _parallelize.py  _utils.py
scvelo/core/tests/: __init__.py  test_anndata.py  test_arithmetic.py  test_base.py  test_linear_models.py  test_metrics.py  test_models.py
scvelo/datasets/: __init__.py  _datasets.py  _read.py  _simulate.py
scvelo/inference/: __init__.py  _metabolic_labeling.py
scvelo/logging/: __init__.py  _logging.py
scvelo/plotting/: __init__.py  docs.py  gridspec.py  heatmap.py  paga.py  palettes.py  proportions.py  pseudotime.py  scatter.py  simulation.py  summary.py  utils.py  velocity.py  velocity_embedding.py  velocity_embedding_grid.py  velocity_embedding_stream.py  velocity_graph.py
scvelo/preprocessing/: __init__.py  _filter.py  _normalize.py  _preprocessing_base.py  fractions.py  moments.py  neighbors.py  proportions.py  recipes.py  utils.py
scvelo/preprocessing/tests/: test_filter.py  test_normalize.py
scvelo/tests/: __init__.py
scvelo/tools/: __init__.py  _core.py  _em_model.py  _em_model_core.py  _em_model_utils.py  _residual_model.py  _steady_state_model.py  _vi_model.py  _vi_module.py  dynamical_model.py  dynamical_model_utils.py  dynamical_model_utils_deprecated.py  optimization.py  paga.py  rank_velocity_genes.py  run.py  score_genes_cell_cycle.py  solver.py  terminal_states.py  transition_matrix.py  utils.py  velocity.py  velocity_confidence.py  velocity_embedding.py  velocity_graph.py  velocity_pseudotime.py  velocity_score.py
scvelo/tools/dynamics/: __init__.py  _dynamics_base.py  _recovery.py
tests/: conftest.py  test_basic.py  test_dynamical_model.py  test_parallelization.py  test_performance.py
tests/_data/: dentategyrus_100obs.h5ad  dentategyrus_100obs_preprocessed.h5ad  dentategyrus_50obs.h5ad  dentategyrus_50obs_preprocessed.h5ad  pancreas_100obs_preprocessed.h5ad  pancreas_50obs.h5ad  pancreas_50obs_preprocessed.h5ad
tests/_data/test_moments/get_moments/: dataset=dentategyrus-n_obs=100-layer=None-mode=connectivities_first_moment.npy  dataset=dentategyrus-n_obs=100-layer=None-mode=connectivities_second_moment.npy  dataset=dentategyrus-n_obs=100-layer=None-mode=distances_first_moment.npy  dataset=dentategyrus-n_obs=100-layer=None-mode=distances_second_moment.npy  dataset=dentategyrus-n_obs=100-layer=spliced-mode=connectivities_first_moment.npy  dataset=dentategyrus-n_obs=100-layer=spliced-mode=connectivities_second_moment.npy  dataset=dentategyrus-n_obs=100-layer=spliced-mode=distances_first_moment.npy  dataset=dentategyrus-n_obs=100-layer=spliced-mode=distances_second_moment.npy  dataset=dentategyrus-n_obs=100-layer=unspliced-mode=connectivities_first_moment.npy  dataset=dentategyrus-n_obs=100-layer=unspliced-mode=connectivities_second_moment.npy  dataset=dentategyrus-n_obs=100-layer=unspliced-mode=distances_first_moment.npy  dataset=dentategyrus-n_obs=100-layer=unspliced-mode=distances_second_moment.npy  dataset=dentategyrus-n_obs=50-layer=None-mode=connectivities_first_moment.npy  dataset=dentategyrus-n_obs=50-layer=None-mode=connectivities_second_moment.npy  dataset=dentategyrus-n_obs=50-layer=None-mode=distances_first_moment.npy  dataset=dentategyrus-n_obs=50-layer=None-mode=distances_second_moment.npy  dataset=dentategyrus-n_obs=50-layer=spliced-mode=connectivities_first_moment.npy  dataset=dentategyrus-n_obs=50-layer=spliced-mode=connectivities_second_moment.npy  dataset=dentategyrus-n_obs=50-layer=spliced-mode=distances_first_moment.npy  dataset=dentategyrus-n_obs=50-layer=spliced-mode=distances_second_moment.npy  dataset=dentategyrus-n_obs=50-layer=unspliced-mode=connectivities_first_moment.npy  dataset=dentategyrus-n_obs=50-layer=unspliced-mode=connectivities_second_moment.npy  dataset=dentategyrus-n_obs=50-layer=unspliced-mode=distances_first_moment.npy  dataset=dentategyrus-n_obs=50-layer=unspliced-mode=distances_second_moment.npy  dataset=pancreas-n_obs=100-layer=None-mode=connectivities_first_moment.npy  dataset=pancreas-n_obs=100-layer=None-mode=connectivities_second_moment.npy  dataset=pancreas-n_obs=100-layer=None-mode=distances_first_moment.npy  dataset=pancreas-n_obs=100-layer=None-mode=distances_second_moment.npy  dataset=pancreas-n_obs=100-layer=spliced-mode=connectivities_first_moment.npy  dataset=pancreas-n_obs=100-layer=spliced-mode=connectivities_second_moment.npy  dataset=pancreas-n_obs=100-layer=spliced-mode=distances_first_moment.npy  (+17 more)
tests/core/: __init__.py  test_anndata.py  test_arithmetic.py  test_base.py  test_linear_models.py  test_metrics.py  test_models.py
tests/datasets/: test_datasets.py  test_simulate.py
tests/preprocessing/: test_moments.py  test_neighbors.py  test_utils.py
tests/tools/: test_steady_state_model.py  test_vi_model.py
(+186 files in other folders)
