[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "scvelo"
version = "0.4.0"
description = "RNA velocity generalized through dynamical modeling"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Volker Bergen", email = "volker.bergen@helmholtz-muenchen.de"},
    {name = "Philipp Weiler"},
    {name = "Adam Gayoso"},
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords=[
    "RNA",
    "velocity",
    "single cell",
    "transcriptomics",
    "stochastic",
    "dynamical",
]
maintainers = [
    {name = "Philipp Weiler", email = "philipp.weiler@helmholtz-muenchen.de"},
]
urls.Documentation = "https://scvelo.org"
urls.Source = "https://github.com/theislab/scvelo"
urls.Home-page = "https://github.com/theislab/scvelo"
dependencies = [
    "anndata>=0.7.5",
    "numpy>=1.17",
    "pandas>=0.23.0,!=1.4.0",
    "scikit-learn>=0.21.2",
    "matplotlib>=3.3.0",
    "scipy>=1.4.1",
    "umap-learn>=0.4.0",
    "loompy>=2.0.12",
    "scanpy>=1.5.0",
    "numba>=0.41.0",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    # CLI for bumping the version number
    "bump2version",
    "pre-commit",
    "ruff",
    "black",
    "hypothesis",
]
doc = [
    "sphinx>=4,<5.3",
    "sphinx_rtd_theme",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "scanpydoc[typehints]>=0.7.4",
    # For notebooks
    "ipython",
    "ipykernel",
    "sphinx-copybutton",
]
test = [
    "pytest",
    "pytest-cov",
    # For vscode Python extension testing
    "ruff",
    "black",
]
louvain = [
    "python-igraph",
    "louvain",
]
hnswlib = ["pybind11", "hnswlib"]

[tool.hatch.build.targets.wheel]
packages = ['scvelo']

[tool.coverage.run]
source = ["scvelo"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.ruff]
line-length = 88
exclude = [".git","__pycache__","build","docs/","_build","dist"]
ignore = ["E402","E501", "F821", "E741"]

[project]
name = "scvelo"
version = "0.2.5"
description = "RNA velocity generalized through dynamical modeling"
readme = {file = "README.rst", content-type="text/rst"}
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Volker Bergen"},
]
maintainers = [
    {name = "Volker Bergen", email = "volker.bergen@helmholtz-muenchen.de"},
]
keywords=[
    "RNA",
    "velocity",
    "single cell",
    "transcriptomics",
    "stochastic",
    "dynamical",
]
classifiers=[
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
urls.Documentation = "https://scvelo.readthedocs.io/"
urls.Source = "https://github.com/theislab/scvelo"
urls.Home-page = "https://github.com/theislab/scvelo"
dependencies = [
    "anndata>=0.7.5",
    "scanpy>=1.5",
    "loompy>=2.0.12",
    "umap-learn>=0.3.10",
    "numba>=0.41.0",
    "numpy>=1.17",
    "pandas>=0.23, !=1.4.0",
    "scipy>=1.4.1",
    "scikit-learn>=0.21.2, <1.2.0",
    "matplotlib>=3.3.0"
]

[project.optional-dependencies]
louvain = [
    "python-igraph",
    "louvain"
]
hnswlib = [
    "pybind11",
    "hnswlib"
]
dev = [
    "black==22.3.0",
    "hnswlib",
    "hypothesis",
    "flake8==3.8.4",
    "isort==5.10.1",
    "louvain",
    "magic-impute",
    "pre-commit>=2.9.0",
    "pybind11",
    "pytest>=6.2.2",
    "pytest-cov",
    "python-igraph",
    "setuptools_scm"
]
docs = [
    # Just until rtd.org understands pyproject.toml
    "scanpy",
    "setuptools",
    "setuptools_scm",
    "importlib_metadata",
    "sphinx_rtd_theme>=0.3",
    "sphinx_autodoc_typehints<=1.6",
    "sphinxcontrib-bibtex>=2.3.0",
    "Jinja2<3.1",
    # converting notebooks to html
    "ipykernel",
    "sphinx>=1.7,<4.0",
    "nbsphinx>=0.7,<0.8.7"
]

[tool.black]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.ruff]
src = ["."]
line-length = 119
target-version = "py38"
select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    "D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "RUF100",  # Report unused noqa directives
]
ignore = [
    # line too long -> we accept long comment lines; black gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]
    "D400",
    # First line should be in imperative mood; try rephrasing
    "D401",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
    # Missing argument description in the docstring TODO: enable
    "D417",
    # Unable to detect undefined names
    "F403",
    # Underfined, or defined from star imports: module
    "F405",
]

[tool.ruff.per-file-ignores]
"docs/*" = ["I", "BLE001"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]
"scvi/__init__.py" = ["I"]

[tool.jupytext]
formats = "ipynb,md"
